# JuceCmakeTemplate

./: CMakeLists.txt
Source/: PluginProcessor.cpp  PluginProcessor.h
